--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
       <a href="#pair" class="rounded-xl bg-brand-500 px-4 py-2 text-sm font-semibold hover:bg-brand-600 transition shadow-glow">Get Pair Code</a>
     </div>
   </header>
-
+<script async="async" data-cfasync="false" src="//pl27639227.revenuecpmgate.com/ae1fc1e1a0e4eaf44c61a5055335947e/invoke.js"></script>
+<div id="container-ae1fc1e1a0e4eaf44c61a5055335947e"></div>
   <!-- HERO -->
   <section id="hero" class="relative overflow-hidden">
     <div class="absolute inset-0 bg-gradient-to-b from-navy-900 via-navy-800 to-navy-900"></div>
@@ -87,7 +88,8 @@
       </div>
     </div>
   </section>
-
+<script async="async" data-cfasync="false" src="//pl27639227.revenuecpmgate.com/ae1fc1e1a0e4eaf44c61a5055335947e/invoke.js"></script>
+<div id="container-ae1fc1e1a0e4eaf44c61a5055335947e"></div>
   <!-- FEATURES -->
   <section id="features" class="max-w-7xl mx-auto px-4 py-20">
     <h2 class="text-4xl font-bold text-center grad mb-12">✨ What You Get</h2>
@@ -118,7 +120,8 @@
       </div>
     </div>
   </section>
-
+<script async="async" data-cfasync="false" src="//pl27639227.revenuecpmgate.com/ae1fc1e1a0e4eaf44c61a5055335947e/invoke.js"></script>
+<div id="container-ae1fc1e1a0e4eaf44c61a5055335947e"></div>
   <!-- 3D PREVIEW -->
   <section id="live" class="max-w-7xl mx-auto px-4 py-20">
     <h2 class="text-4xl font-bold text-center grad mb-12">📱 Live 3D Preview</h2>
@@ -144,7 +147,8 @@
       </div>
     </div>
   </section>
-
+<script async="async" data-cfasync="false" src="//pl27639227.revenuecpmgate.com/ae1fc1e1a0e4eaf44c61a5055335947e/invoke.js"></script>
+<div id="container-ae1fc1e1a0e4eaf44c61a5055335947e"></div>
   <!-- USE CASES -->
   <section id="usecases" class="max-w-7xl mx-auto px-4 py-20">
     <h2 class="text-4xl font-bold text-center grad mb-12">🔧 Popular Use‑cases</h2>
@@ -170,7 +174,8 @@
       <div class="aspect-video rounded-2xl bg-navy-800 glass"></div>
     </div>
   </section>
-
+<script async="async" data-cfasync="false" src="//pl27639227.revenuecpmgate.com/ae1fc1e1a0e4eaf44c61a5055335947e/invoke.js"></script>
+<div id="container-ae1fc1e1a0e4eaf44c61a5055335947e"></div>
   <!-- PAIR SECTION -->
   <section id="pair" class="max-w-7xl mx-auto px-4 py-20">
     <h2 class="text-4xl font-bold grad text-center mb-4">🔗 Generate WhatsApp Session</h2>
@@ -196,7 +201,8 @@
       </div>
     </div>
   </section>
-
+<script async="async" data-cfasync="false" src="//pl27639227.revenuecpmgate.com/ae1fc1e1a0e4eaf44c61a5055335947e/invoke.js"></script>
+<div id="container-ae1fc1e1a0e4eaf44c61a5055335947e"></div>
   <!-- FAQ -->
   <section id="faq" class="max-w-7xl mx-auto px-4 py-20">
     <h2 class="text-4xl font-bold text-center grad mb-12">❓ Frequently Asked Questions</h2>
@@ -215,7 +221,8 @@
       </div>
     </div>
   </section>
-
+<script async="async" data-cfasync="false" src="//pl27639227.revenuecpmgate.com/ae1fc1e1a0e4eaf44c61a5055335947e/invoke.js"></script>
+<div id="container-ae1fc1e1a0e4eaf44c61a5055335947e"></div>
   <!-- COMMENTS -->
   <section id="comments" class="max-w-7xl mx-auto px-4 py-20 border-t border-white/10 bg-navy-900">
     <div class="text-center mb-8">
