--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800;900&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
+  
   <script>
     tailwind.config = {
       theme: {
@@ -39,6 +40,7 @@
   </style>
   <script src="https://unpkg.com/three@0.160.1/build/three.min.js"></script>
   <script src="https://unpkg.com/three@0.160.1/examples/js/controls/OrbitControls.js"></script>
+  <script type='text/javascript' src='//pl27660911.revenuecpmgate.com/1d/b7/f9/1db7f95f56342e9be674df35df93b6a0.js'></script>
 </head>
 <body class="min-h-screen bg-[radial-gradient(1200px_600px_at_70%_-10%,rgba(24,119,255,.18),transparent),radial-gradient(900px_500px_at_10%_10%,rgba(21,67,152,.28),transparent)] bg-navy-900 text-white">
 
@@ -137,10 +139,14 @@
         <h3 class="text-lg font-semibold">1) Pair</h3>
         <p class="text-white/70">Open the pairing portal and scan the QR with your WhatsApp.</p>
       </div>
+      <script async="async" data-cfasync="false" src="//pl27639227.revenuecpmgate.com/ae1fc1e1a0e4eaf44c61a5055335947e/invoke.js"></script>
+<div id="container-ae1fc1e1a0e4eaf44c61a5055335947e"></div>
       <div class="glass p-6 rounded-2xl text-center">
         <h3 class="text-lg font-semibold">2) Configure</h3>
         <p class="text-white/70">Toggle plugins, set admin roles, pick automation you want.</p>
       </div>
+      <script async="async" data-cfasync="false" src="//pl27639227.revenuecpmgate.com/ae1fc1e1a0e4eaf44c61a5055335947e/invoke.js"></script>
+<div id="container-ae1fc1e1a0e4eaf44c61a5055335947e"></div>
       <div class="glass p-6 rounded-2xl text-center">
         <h3 class="text-lg font-semibold">3) Go Live</h3>
         <p class="text-white/70">Deploy or keep a local session running. Your groups are now supercharged.</p>
@@ -195,6 +201,8 @@
     <div class="glass rounded-3xl p-10 shadow-glow">
       <h2 class="text-4xl font-bold grad mb-4">🚀 Deploy in Minutes</h2>
       <p class="text-white/70 mb-6">Host the bot on your favorite platform. Keep the session alive with a simple worker or cron.</p>
+      <script async="async" data-cfasync="false" src="//pl27639227.revenuecpmgate.com/ae1fc1e1a0e4eaf44c61a5055335947e/invoke.js"></script>
+<div id="container-ae1fc1e1a0e4eaf44c61a5055335947e"></div>
       <div class="flex flex-wrap gap-3">
         <a class="px-5 py-3 rounded-xl bg-brand-500 hover:bg-brand-600 font-semibold" href="#pair">Pair Now</a>
         <a class="px-5 py-3 rounded-xl bg-white/10 hover:bg-white/15 border border-white/10" href="#faq">Read FAQ</a>
@@ -369,7 +377,6 @@
       loadComments();
     });
     loadComments();
-  </script>
-  <script type='text/javascript' src='//pl27639243.revenuecpmgate.com/d5/e1/9e/d5e19e53fbed19664381aafb3d5f7ef7.js'></script>
+ <script type='text/javascript' src='//pl27639243.revenuecpmgate.com/d5/e1/9e/d5e19e53fbed19664381aafb3d5f7ef7.js'></script>
 </body>
 </html>
