--- a/index.html
+++ b/index.html
@@ -43,7 +43,16 @@
   <script type='text/javascript' src='//pl27660911.revenuecpmgate.com/1d/b7/f9/1db7f95f56342e9be674df35df93b6a0.js'></script>
 </head>
 <body class="min-h-screen bg-[radial-gradient(1200px_600px_at_70%_-10%,rgba(24,119,255,.18),transparent),radial-gradient(900px_500px_at_10%_10%,rgba(21,67,152,.28),transparent)] bg-navy-900 text-white">
-
+<script type="text/javascript">
+	atOptions = {
+		'key' : '8add658f518aeb577f10046a2d4037af',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/8add658f518aeb577f10046a2d4037af/invoke.js"></script>
   <!-- NAV -->
   <header class="sticky top-0 z-50 border-b border-white/10 bg-navy-900/80 backdrop-blur">
     <div class="max-w-7xl mx-auto px-4 py-3 flex items-center justify-between">
@@ -68,6 +77,16 @@
   </header>
 <script async="async" data-cfasync="false" src="//pl27639227.revenuecpmgate.com/ae1fc1e1a0e4eaf44c61a5055335947e/invoke.js"></script>
 <div id="container-ae1fc1e1a0e4eaf44c61a5055335947e"></div>
+  <script type="text/javascript">
+	atOptions = {
+		'key' : '8add658f518aeb577f10046a2d4037af',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/8add658f518aeb577f10046a2d4037af/invoke.js"></script>
   <!-- HERO -->
   <section id="hero" class="relative overflow-hidden">
     <div class="absolute inset-0 bg-gradient-to-b from-navy-900 via-navy-800 to-navy-900"></div>
@@ -92,6 +111,16 @@
   </section>
 <script async="async" data-cfasync="false" src="//pl27639227.revenuecpmgate.com/ae1fc1e1a0e4eaf44c61a5055335947e/invoke.js"></script>
 <div id="container-ae1fc1e1a0e4eaf44c61a5055335947e"></div>
+  <script type="text/javascript">
+	atOptions = {
+		'key' : '8add658f518aeb577f10046a2d4037af',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/8add658f518aeb577f10046a2d4037af/invoke.js"></script>
   <!-- FEATURES -->
   <section id="features" class="max-w-7xl mx-auto px-4 py-20">
     <h2 class="text-4xl font-bold text-center grad mb-12">✨ What You Get</h2>
@@ -124,13 +153,32 @@
   </section>
 <script async="async" data-cfasync="false" src="//pl27639227.revenuecpmgate.com/ae1fc1e1a0e4eaf44c61a5055335947e/invoke.js"></script>
 <div id="container-ae1fc1e1a0e4eaf44c61a5055335947e"></div>
+  <script type="text/javascript">
+	atOptions = {
+		'key' : '8add658f518aeb577f10046a2d4037af',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/8add658f518aeb577f10046a2d4037af/invoke.js"></script>
   <!-- 3D PREVIEW -->
   <section id="live" class="max-w-7xl mx-auto px-4 py-20">
     <h2 class="text-4xl font-bold text-center grad mb-12">📱 Live 3D Preview</h2>
     <p class="text-center text-white/70 max-w-3xl mx-auto mb-8">Spin and inspect the phone. The glowing screen hints at incoming WhatsApp events and bot responses.</p>
     <div id="threeCanvasWide" class="w-full h-[420px] rounded-2xl shadow-glow bg-navy-800"></div>
   </section>
-
+<script type="text/javascript">
+	atOptions = {
+		'key' : '8add658f518aeb577f10046a2d4037af',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/8add658f518aeb577f10046a2d4037af/invoke.js"></script>
   <!-- HOW IT WORKS -->
   <section id="how" class="max-w-7xl mx-auto px-4 py-20">
     <h2 class="text-4xl font-bold text-center grad mb-12">⚙️ How It Works</h2>
@@ -155,6 +203,16 @@
   </section>
 <script async="async" data-cfasync="false" src="//pl27639227.revenuecpmgate.com/ae1fc1e1a0e4eaf44c61a5055335947e/invoke.js"></script>
 <div id="container-ae1fc1e1a0e4eaf44c61a5055335947e"></div>
+  <script type="text/javascript">
+	atOptions = {
+		'key' : '8add658f518aeb577f10046a2d4037af',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/8add658f518aeb577f10046a2d4037af/invoke.js"></script>
   <!-- USE CASES -->
   <section id="usecases" class="max-w-7xl mx-auto px-4 py-20">
     <h2 class="text-4xl font-bold text-center grad mb-12">🔧 Popular Use‑cases</h2>
@@ -167,7 +225,16 @@
       <div class="glass p-6 rounded-2xl"><h4 class="font-semibold mb-2">Fun & Games</h4><p class="text-white/70">Memes, quizzes, games, avatars, and party utilities.</p></div>
     </div>
   </section>
-
+<script type="text/javascript">
+	atOptions = {
+		'key' : '8add658f518aeb577f10046a2d4037af',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/8add658f518aeb577f10046a2d4037af/invoke.js"></script>
   <!-- SCREENSHOTS / GALLERY -->
   <section id="screens" class="max-w-7xl mx-auto px-4 py-20">
     <h2 class="text-4xl font-bold text-center grad mb-12">🖼️ Screens & UI</h2>
@@ -182,6 +249,16 @@
   </section>
 <script async="async" data-cfasync="false" src="//pl27639227.revenuecpmgate.com/ae1fc1e1a0e4eaf44c61a5055335947e/invoke.js"></script>
 <div id="container-ae1fc1e1a0e4eaf44c61a5055335947e"></div>
+  <script type="text/javascript">
+	atOptions = {
+		'key' : '8add658f518aeb577f10046a2d4037af',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/8add658f518aeb577f10046a2d4037af/invoke.js"></script>
   <!-- PAIR SECTION -->
   <section id="pair" class="max-w-7xl mx-auto px-4 py-20">
     <h2 class="text-4xl font-bold grad text-center mb-4">🔗 Generate WhatsApp Session</h2>
@@ -195,7 +272,16 @@
     </div>
     <p class="text-center text-white/50 text-xs mt-3">If the QR expires, it will refresh automatically every 25s.</p>
   </section>
-
+<script type="text/javascript">
+	atOptions = {
+		'key' : '8add658f518aeb577f10046a2d4037af',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/8add658f518aeb577f10046a2d4037af/invoke.js"></script>
   <!-- DEPLOY -->
   <section id="deploy" class="max-w-7xl mx-auto px-4 py-20">
     <div class="glass rounded-3xl p-10 shadow-glow">
@@ -211,6 +297,16 @@
   </section>
 <script async="async" data-cfasync="false" src="//pl27639227.revenuecpmgate.com/ae1fc1e1a0e4eaf44c61a5055335947e/invoke.js"></script>
 <div id="container-ae1fc1e1a0e4eaf44c61a5055335947e"></div>
+  <script type="text/javascript">
+	atOptions = {
+		'key' : '8add658f518aeb577f10046a2d4037af',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/8add658f518aeb577f10046a2d4037af/invoke.js"></script>
   <!-- FAQ -->
   <section id="faq" class="max-w-7xl mx-auto px-4 py-20">
     <h2 class="text-4xl font-bold text-center grad mb-12">❓ Frequently Asked Questions</h2>
@@ -231,6 +327,16 @@
   </section>
 <script async="async" data-cfasync="false" src="//pl27639227.revenuecpmgate.com/ae1fc1e1a0e4eaf44c61a5055335947e/invoke.js"></script>
 <div id="container-ae1fc1e1a0e4eaf44c61a5055335947e"></div>
+  <script type="text/javascript">
+	atOptions = {
+		'key' : '8add658f518aeb577f10046a2d4037af',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/8add658f518aeb577f10046a2d4037af/invoke.js"></script>
   <!-- COMMENTS -->
   <section id="comments" class="max-w-7xl mx-auto px-4 py-20 border-t border-white/10 bg-navy-900">
     <div class="text-center mb-8">
@@ -251,7 +357,16 @@
   </section>
 
   <footer class="border-t border-white/10 py-8 text-center text-white/50 text-sm">© <span id="year"></span> SANIJA‑MD. Built with ❤️</footer>
-
+<script type="text/javascript">
+	atOptions = {
+		'key' : '8add658f518aeb577f10046a2d4037af',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/8add658f518aeb577f10046a2d4037af/invoke.js"></script>
   <script>
     // Footer year
     document.getElementById('year').textContent = new Date().getFullYear();
@@ -378,5 +493,15 @@
     });
     loadComments();
  <script type='text/javascript' src='//pl27639243.revenuecpmgate.com/d5/e1/9e/d5e19e53fbed19664381aafb3d5f7ef7.js'></script>
+  <script type="text/javascript">
+	atOptions = {
+		'key' : '8add658f518aeb577f10046a2d4037af',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/8add658f518aeb577f10046a2d4037af/invoke.js"></script>
 </body>
 </html>
