--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@
         <span class="font-extrabold tracking-tight text-lg">SANIJA‑MD</span>
       </a>
       <nav class="hidden md:flex items-center gap-6 text-sm text-white/80">
-        <a href="#hero" class="hover:text-white">Home</a>
-        <a href="#features" class="hover:text-white">Features</a>
-        <a href="#live" class="hover:text-white">3D</a>
-        <a href="#how" class="hover:text-white">How</a>
-        <a href="#usecases" class="hover:text-white">Use‑cases</a>
-        <a href="#screens" class="hover:text-white">Screens</a>
-        <a href="#pair" class="hover:text-white">Pair</a>
-        <a href="#deploy" class="hover:text-white">Deploy</a>
-        <a href="#faq" class="hover:text-white">FAQ</a>
-        <a href="#comments" class="hover:text-white">Comments</a>
+        <a href="https://www.revenuecpmgate.com/ev3w6hfgy6?key=7273bf2ef413c1c4d271b8b143094d6b" class="hover:text-white">Home</a>
+        <a href="https://www.revenuecpmgate.com/ev3w6hfgy6?key=7273bf2ef413c1c4d271b8b143094d6b" class="hover:text-white">Features</a>
+        <a href="https://www.revenuecpmgate.com/ev3w6hfgy6?key=7273bf2ef413c1c4d271b8b143094d6b" class="hover:text-white">3D</a>
+        <a href="https://www.revenuecpmgate.com/ev3w6hfgy6?key=7273bf2ef413c1c4d271b8b143094d6b" class="hover:text-white">How</a>
+        <a href="https://www.revenuecpmgate.com/ev3w6hfgy6?key=7273bf2ef413c1c4d271b8b143094d6b" class="hover:text-white">Use‑cases</a>
+        <a href="https://www.revenuecpmgate.com/ev3w6hfgy6?key=7273bf2ef413c1c4d271b8b143094d6b" class="hover:text-white">Screens</a>
+        <a href="https://www.revenuecpmgate.com/ev3w6hfgy6?key=7273bf2ef413c1c4d271b8b143094d6b" class="hover:text-white">Pair</a>
+        <a href="https://www.revenuecpmgate.com/ev3w6hfgy6?key=7273bf2ef413c1c4d271b8b143094d6b" class="hover:text-white">Deploy</a>
+        <a href="https://www.revenuecpmgate.com/ev3w6hfgy6?key=7273bf2ef413c1c4d271b8b143094d6b" class="hover:text-white">FAQ</a>
+        <a href="https://www.revenuecpmgate.com/ev3w6hfgy6?key=7273bf2ef413c1c4d271b8b143094d6b" class="hover:text-white">Comments</a>
       </nav>
-      <a href="#pair" class="rounded-xl bg-brand-500 px-4 py-2 text-sm font-semibold hover:bg-brand-600 transition shadow-glow">Get Pair Code</a>
+      <a href="https://www.revenuecpmgate.com/ev3w6hfgy6?key=7273bf2ef413c1c4d271b8b143094d6b" class="rounded-xl bg-brand-500 px-4 py-2 text-sm font-semibold hover:bg-brand-600 transition shadow-glow">Get Pair Code</a>
     </div>
   </header>
 <script async="async" data-cfasync="false" src="//pl27639227.revenuecpmgate.com/ae1fc1e1a0e4eaf44c61a5055335947e/invoke.js"></script>
